@@ -2,7 +2,6 @@ Lib:
 * Seen "FindPathTo: Unknown path to block" from NewChainExt/ParseTillBlock on init, after soft exit. Undo helped.
 * Check implemetation against this: https://bitslog.wordpress.com/2017/01/08/a-bitcoin-transaction-that-takes-5-hours-to-verify/
 * Try to make own (faster) implementation of sha256 and rimp160
-* The best chain should be decided on the amount of hashing work, not the length - SetBestChain()
 
 Client:
 * WebUI to offer switching to "-trust -nowallet" mode while downloading many blocks.
